# CALGO

./: COPYRIGHT  Changes  README.md  blas.cdc  blas.ibm  blas.other  disclaimer  index  index.html  keywords  readme
0852/Src/src/: Makefile.am  Makefile.in  config.h  config.h.in  default_interval.c  domain.h  interval.h  interval_interface.h  list_domains.h  parser.y  profile.h  propagation_local.h
0852/Src/src/.deps/: constant.P  constant.Po  evaluator.P  interval.P  lexer.Po  main.P  parser.Po  propagation_local.P  propagation_local.Po  propagation_strong.P  union_interval.P
0856/Original-Submission/appspack-4.0.2/examples/: Makefile.am  example1.out  example2.out  example3.apps  example3.cpp  example3.out
0856/appspack-4.0.2/src/: APPSPACK_Config.hpp.in  APPSPACK_Constraints_Bounds.cpp  APPSPACK_Constraints_Interface.hpp  APPSPACK_Evaluator_SystemCall.cpp  APPSPACK_Evaluator_SystemCall.hpp  APPSPACK_Executor_Interface.hpp  APPSPACK_GCI.hpp  APPSPACK_Utils.hpp  Makefile.am
0867/Src/quadlog-gampsi-slim/gampsi/: agen2.f  configure.in  sgigam.c  tagen.f  tmdgam.f  tmdpsi.f
0867/Src/quadlog-gampsi-slim/laguerre/: configure.in  glqf.f  qglqf.f  tglf1.f  tglf2.f  tqglfd5.f
0909/Src/nomad.3.4.2/install/: configure  configure.in
0924/: configure.ac
0924/MathTIDES/: Codes.m
0924/Metadata/: DOI.txt  URL.txt
0924/Original-Submission/: 924.head  AUTHORS  INSTALL  Makefile.am  Makefile.in  README  config.h.in  configure
0924/Original-Submission/MathTIDES/: Iterations.m  MinimalCode.m  ODES.m  StandardCode.m
0924/Original-Submission/doc/: tidesguide.tex
0924/Original-Submission/libTIDES/: Makefile.am  Makefile.in  doubITER.c  doubITER.h  mpfrITER.c  mpfrITER.h  mpfrNUM.c  mpfrNUM.h  mpfrNUMdef.h  taylorODE.c  taylorODE.h
0924/Original-Submission/m4/: gmp.m4  mpfr.m4
0924/Original-Submission/test/: minc_kepler.c  minc_lorenz.c  minf_kepler.f  minf_lorenz.f  minf_tides.f  mpfr_kepler.c  mpfr_kepler.h  mpfr_lorenz.c  mpfr_lorenz.h  std_lorenz.h  std_lorenz_partials.c  test_minc_kepler.c  test_minc_lorenz.c  test_mpfr_kepler_14.c  test_mpfr_kepler_50.c  test_std_kepler_partials.c  test_std_lorenz.c  test_std_lorenz_partials.c
0924/libTIDES/: commonITER.c  commonITER.h  doubNUMdef.h  mpfrtaylorODE.c  mpfrtaylorODE.h
0924/test/: Makefile.am  Makefile.in  minc_tides.c  std_kepler.h  std_kepler_partials.h  std_lorenz.c  test_minf_kepler.f  test_minf_lorenz.f  test_std_kepler.c
0940/Original-Submission/Src/: CMakeLists.txt
0940/Original-Submission/Src/Compile/: 3param_associative.cpp  3param_commutative.cpp  ExpressionTemplateObjects.cpp  large_balanced_associative.cpp  loop_fusion.cpp  multipleVectorCommutative.cpp
0940/Original-Submission/Src/Performance/: Armadillo.cpp  Blitz.cpp  CMakeLists.txt  ConjugateGradient.hpp  Eigen.cpp  HandCoded.cpp  MET.cpp  MatrixMultiplication.h  NektarMoveConstructors.h  NektarWithExpTemplates.cpp  Stat.h  TimingTestRunner.h  UBlas.h  main.cpp
0940/Original-Submission/Src/Testing/: CMakeLists.txt  TestBackwardsInverseTransform.cpp  TestMatrixBlasOptimizations.cpp  TestMatrixBufferSize.cpp  TestRemoveUnecessaryTemporaries.cpp
0965/: Doxyfile.in  configure.ac
0965/Original-Submission/: 965.head  Makefile.am
0965/Original-Submission/doc/source/: 1_contributing.md  2_running.md  3_use.md
0965/Original-Submission/doxygen-doc/latex/: 0__installing_8md.tex  2__running_8md.tex  Makefile  README_8md.tex  brusselator__gsl_2brusselator_8cpp.tex  brusselator__mkl_2brusselator_8cpp.tex  classBrusselator__MKL.tex  classExplicitOde.eps  classExplicitOde.tex  classImplicitMKL.tex  classImplicitOde.tex  classODE.tex  dir_049f19cc038022a8918421bbebc54b48.tex  dir_68267d1309a1af8e8297ef4c3efbcdba.tex  dir_d28a4824dc47e487b107a5db32ef43c4.tex  dir_e5dfe7f06eb68ce44e8f7bf74da3286e.tex  explicit_8cpp.tex  files.tex  hierarchy.tex  implicit_8h.tex  md_doc_source_3_use.tex  mkl_2implicit_8cpp.tex  ode_8h.tex  radau_8cpp.tex  refman.idx  refman.ind  refman.tex  refman.toc  ridc_8cpp.tex  structPARAMETER.tex
0965/Original-Submission/examples/brusselator_gsl/: Makefile.am
0965/Original-Submission/examples/brusselator_mkl/: Makefile.am  Makefile.in  brusselator.h  run.sh
0965/Original-Submission/src/: Makefile.am  Makefile.in  ridc.h
0965/autom4te.cache/: output.1  requests  traces.1
0965/doxygen-doc/: libridc.tag
0965/doxygen-doc/latex/: 1__contributing_8md.tex  3__use_8md.tex  brusselator__gsl_2brusselator_8h.tex  classBrusselator__GSL.tex  classBrusselator__MKL.eps  classImplicitMKL.eps  dir_e4cd78897627cb0aad520d95d3f2770b.tex  implicit_8cpp.tex  md_doc_source_0_installing.tex  refman.aux  ridc_8h.tex  running.tex
0965/examples/brusselator_gsl/: run.sh
0965/examples/brusselator_mkl/: brusselator.cpp
0965/examples/brusselator_radau_mkl/: Makefile.am  timing.sh
0965/examples/explicit/: run.sh
0965/examples/explicit/ref/: n5.ref
0965/examples/implicit/: implicit.cpp
0966/Original-Submission/art-gallery-pg/: CMakeLists.txt
0966/Original-Submission/polygon/: CMakeLists.txt  PolygonExt.C  PolygonWithHolesExt.C  PolygonWithHolesExt.h  polAlgorithms.C
0966/Original-Submission/pre-solver/: CMakeLists.txt  PreSolver.C
0966/Original-Submission/scp-solver/: CMakeLists.txt  SolverPLIGlpk.h  SolverPLIXpress.C
0994/Original-Submission/Src/: config.in  configure  configure.ac
1026/Original-Submission/CPP/: CMakeLists.txt  DOXYGEN  LICENSE  README.md
852/Src/: AUTHORS  Makefile  Makefile.am  README  TODO  configure  configure.in  manifest.txt
852/Src/autom4te-2.53.cache/: output.0  traces.0
852/Src/benchmarks/: abc  chemistry2  kinematics2  kinematics3  more-cosnard40  wilkinson
852/Src/src/: constant.c  default_interval.h  domain.c  evaluator.c  narrowing_hullbox.h  narrowing_newton.h  propagation_strong.c  propagation_strong.h  variable.h
871/gsl-1.6-precompile/wavelet/: Makefile.am  daubechies.c  dwt.c  gsl_wavelet2d.h  test.c
965/examples/implicit_mkl/: Makefile.am  run.sh
966/grid/: CMakeLists.txt  IGrid.C
976/Src/BertiniSource_v1.5.1/: configure.ac
976/Src/bertini_real-1.4.0/: ChangeLog  Makefile.am
(+34469 files in other folders)
