ACLOCAL_AMFLAGS = -I m4

SUBDIRS = libTIDES test

EXTRA_DIST = InstallMathTIDES.nb \
             MathTIDES/Codes.m MathTIDES/Iterations.m \
             MathTIDES/LKFunctions.m MathTIDES/MinimalCode.m \
             MathTIDES/ODES.m MathTIDES/StandardCode.m \
             MathTIDES/Texts.m MathTIDES/init.m \
             doc/tidesguide.pdf
